# assignment5.4_2

assignment5_4__2_QC/: CMakeLists.txt  list.cpp  list.h  test_main.cpp
build-assignment5_4__2_QC-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-assignment5_4__2_QC-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-79974a5af56b402f814d.json  directory-Catch2-build-Debug-d444e7c2b9491560b46f.json  directory-Catch2-build.src-Debug-b4dc61b7aa954e93c704.json  index-2023-12-27T01-16-16-0994.json  target-Catch2WithMain-Debug-b4db059b710e39a9af07.json
build-assignment5_4__2_QC-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-22b75d76a7c9a66a3e98.json  cmakeFiles-v1-5e1fe3bacc3b2c22a16d.json  target-Catch2-Debug-3bd95c40957646c206d5.json  target-assignment5_4__2_QC_TEST-Debug-41dc92e9b5ec07b25ebc.json
build-assignment5_4__2_QC-Desktop-Debug/Catch2-build/: Makefile  cmake_install.cmake
build-assignment5_4__2_QC-Desktop-Debug/Catch2-build/src/: Makefile  cmake_install.cmake
